--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -19,7 +19,7 @@
           </h1>
         </div>
         <div class="picture-image">
-          <p> <img src='<%=listing.image%>'> </p>
+          <p> <img src='<%=listing.image%>' alt= "error" height="400px" width="400px"> </p>
           <p>Photographer: <%=listing.photographer%></p>
         </div>
         <% if(listing.owner._id.equals(user._id)){ %>
